# 2D3DReg

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  drr2xay.py  drr2xray.py  generate_drr.py  pyproject.toml  requirements.txt  visual_drr.py  visualize_disp.py
experiments/deepfluoro/: eval.py  models.py  run.py  run.sh  utils.py
src/polypose/: __init__.py
src/polypose/loss/: __init__.py  loss.py  regularizers.py
src/polypose/models/: __init__.py  densese3.py  densexyz.py  polypose.py  renderer.py
src/polypose/plot/: __init__.py  plot.py
src/polypose/utils/: __init__.py  ants.py
src/polypose/warp/: __init__.py  nonrigid.py  polyrigid.py  se3field.py  warp.py
src/polypose/weights/: __init__.py  sdf.py  weights.py
xvr_src/xvr-main/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  zensical.toml
xvr_src/xvr-main/docs/: index.md
xvr_src/xvr-main/scripts/pelvis/evaluate/: finetuned.py  patient_agnostic.py  patient_specific.py
xvr_src/xvr-main/scripts/pelvis/register/: finetuned.py  patient_agnostic.py  patient_specific.py
xvr_src/xvr-main/scripts/pelvis/train/: finetuned.py  patient_agnostic.py  patient_specific.py
xvr_src/xvr-main/scripts/skull/train/: patient_agnostic.py
xvr_src/xvr-main/scripts/vessels/evaluate/: finetuned.py  patient_agnostic.py  patient_specific.py
xvr_src/xvr-main/scripts/vessels/register/: finetuned.py  patient_agnostic.py  patient_specific.py
xvr_src/xvr-main/scripts/vessels/train/: finetuned.py  patient_agnostic.py  patient_specific.py
xvr_src/xvr-main/src/xvr/: __init__.py  cli.py  dicom.py  metrics.py  model.py  registrar.py  renderer.py  utils.py  visualization.py
xvr_src/xvr-main/src/xvr/commands/: __init__.py  animate.py  dcm2nii.py  finetune.py  register.py  restart.py  train.py
xvr_src/xvr-main/utils/: dcmwrite.py
