[project]
name = "polypose"
version = "0.0.0rc1"
description = "Deformable 2D/3D registration without regularization via polyrigid transformations"
readme = "README.md"
authors = [
    { name = "Vivek Gopalakrishnan", email = "vivekg@mit.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "cupy-cuda12x>=13.3.0",
    "diffdrr==0.5.1",
    "jaxtyping>=0.3",
    "monai>=1.4.0",
    "totalsegmentator>=2.10.0",
    "xvr",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
ignore = ["F722"]

[tool.uv.sources]
xvr = { git = "https://github.com/eigenvivek/xvr.git" }

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab-execute-time>=3.2.0",
    "nbqa>=1.9.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.4",
]
