[project]
name = "polypose"
version = "0.0.0rc1"
description = "Deformable 2D/3D registration without regularization via polyrigid transformations"
readme = "README.md"
authors = [
    { name = "Vivek Gopalakrishnan", email = "vivekg@mit.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "cupy-cuda12x>=13.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
ignore = ["F722"]

